Add sync-all-instruments route and improve historical data fetching from Zerodha

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=5001
 MONGODB_URI=mongodb://localhost:27017/ntrader
-JWT_SECRET=ntrader_secret_key_2024
+JWT_SECRET=LG5jkCDKKbQX0fpkYsDNOw3L9mmXium5rjqMIyIj4d8
 
 # Zerodha Kite Connect Configuration
 ZERODHA_API_KEY=7mz9na18jv6nhfe0
@@ -9,3 +9,13 @@ ZERODHA_API_SECRET=qc0nnbgvk2uzdfrcuo8ja4gbki0r57sm
 # Server URLs
 SERVER_URL=http://localhost:5001
 CLIENT_URL=http://localhost:3000
+
+
+
+
+# Angel One SmartAPI Configuration
+# ANGELONE_API_KEY=YsMvjWim
+# ANGELONE_SECRET_KEY=02062f24-fd40-4ad2-b9ea-fd8d0e28fee6
+# ANGELONE_CLIENT_ID=S57121680
+# ANGELONE_PASSWORD=2580
+# ANGELONE_TOTP_SECRET=2UBFLLSJ7TYCXKMQ7ZVXKX5XVA
