--- a/nginx.conf
+++ b/nginx.conf
@@ -51,6 +51,15 @@ server {
         proxy_read_timeout 86400;
     }
 
+    # Serve uploaded files from backend
+    location /uploads {
+        proxy_pass http://127.0.0.1:5001;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # React Router - serve index.html for all routes
     location / {
         try_files $uri $uri/ /index.html;
